--- a/src/assets/scss/app.css
+++ b/src/assets/scss/app.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @layer base {
   body {
     @apply h-full overflow-x-hidden dark:text-slate-300 text-slate-600 font-normal;
@@ -62,9 +63,9 @@
   }
 }
 @layer components {
-  .table-th {
-    @apply text-slate-600 dark:text-slate-300 text-xs  font-semibold  uppercase py-5 px-6 ltr:text-left rtl:text-right;
-  }
+  /* .table-th {
+    @apply  text-slate-100 dark:text-slate-300 text-xs  font-semibold  uppercase py-5 px-6 ltr:text-left rtl:text-right;
+  } */
   .table-td {
     @apply text-slate-600 dark:text-slate-300 text-sm font-normal capitalize px-6 py-5   border-slate-100 dark:border-slate-700;
   }
