--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -5,18 +5,22 @@
 @layer base {
   body {
     @apply h-full overflow-x-hidden dark:text-slate-300 text-slate-600 font-normal;
+
     &.light,
     &.skin--default {
       @apply bg-slate-100;
     }
+
     &.lght,
     &.skin--bordered {
       @apply bg-transparent;
     }
+
     &.dark {
       @apply bg-[#0f172a] text-slate-300;
     }
   }
+
   html,
   body {
     @apply h-full;
@@ -25,24 +29,29 @@
   .dashcode-app-wrapper {
     @apply relative;
   }
+
   .single-sidebar-menu .ReactCollapse--collapse {
     transition: height 400ms;
   }
+
   .space-xy-5 {
-    > div,
-    > button,
-    > a,
+
+    >div,
+    >button,
+    >a,
     label,
-    > * {
+    >* {
       @apply mr-2 mb-2;
     }
   }
+
   .space-xy-6 {
-    > div,
-    > button,
-    > a,
+
+    >div,
+    >button,
+    >a,
     label,
-    > * {
+    >* {
       @apply mr-4 mb-2;
     }
   }
@@ -51,28 +60,34 @@
     .recharts-wrapper {
       direction: rtl;
     }
+
     .recharts-yAxis {
       .recharts-text {
         text-anchor: start;
       }
     }
   }
+
   .dashcode-app {
     .leaflet-control {
       z-index: 0 !important;
     }
+
     .leaflet-control-container {
       z-index: 555 !important;
       position: relative;
     }
+
     .recharts-curve.recharts-tooltip-cursor {
       display: none;
     }
+
     .recharts-wrapper.bar-chart {
       .recharts-tooltip-cursor {
         fill: transparent;
       }
     }
+
     .recharts-tooltip-wrapper {
       border: none !important;
     }
@@ -85,6 +100,7 @@
     // }
   }
 }
+
 @layer components {
   @import "components/table.scss";
   @import "components/map.scss";
@@ -114,5 +130,5 @@
   @import "components/print.scss";
 
 }
-@layer utilities {
-}
+
+@layer utilities {}
